[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scenes/Database Test/Database Test.gd" type="Script" id=1]

[node name="DB" type="Control"]
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 112.0
margin_top = 80.0
margin_right = 715.0
margin_bottom = 290.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 603.0
margin_bottom = 14.0
text = "Student ID:"

[node name="LineEdit" type="LineEdit" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 603.0
margin_bottom = 42.0
caret_blink = true
caret_blink_speed = 0.5

[node name="Label2" type="Label" parent="VBoxContainer"]
margin_top = 46.0
margin_right = 603.0
margin_bottom = 60.0
text = "Student Name:"

[node name="LineEdit2" type="LineEdit" parent="VBoxContainer"]
margin_top = 64.0
margin_right = 603.0
margin_bottom = 88.0
caret_blink = true
caret_blink_speed = 0.5

[node name="Label3" type="Label" parent="VBoxContainer"]
margin_top = 92.0
margin_right = 603.0
margin_bottom = 106.0
text = "Score:"

[node name="LineEdit3" type="LineEdit" parent="VBoxContainer"]
margin_top = 110.0
margin_right = 603.0
margin_bottom = 134.0
caret_blink = true
caret_blink_speed = 0.5

[node name="Button" type="Button" parent="VBoxContainer"]
margin_top = 138.0
margin_right = 603.0
margin_bottom = 158.0
text = "SEND TO DATABASE"

[node name="Button2" type="Button" parent="VBoxContainer"]
margin_top = 162.0
margin_right = 603.0
margin_bottom = 182.0
text = "GET DATA FROM DATABASE"

[node name="HTTPRequest" type="HTTPRequest" parent="."]
[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="VBoxContainer/Button2" to="." method="_on_Button2_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
